--- a/components/services/services.module.scss
+++ b/components/services/services.module.scss
@@ -12,6 +12,7 @@
 		grid-gap: 15px;
 
 		.service_wrapper {
+			width: 100%;
 			background: var(--secondaryBg); 
 			border: 3px solid var(--borderColor);
 			box-shadow: var(--shadow);
@@ -36,14 +37,34 @@
 			  line-height: 1.5;
 			  opacity: 0.8;
 			}
+
+			.my-masonry-grid {
+			  display: -webkit-box;
+			  display: -ms-flexbox;
+			  display: flex;
+			  width: 100%;
+
+			  .my-masonry-grid_column {
+			    background-clip: padding-box;
+			  }
+
+			  .my-masonry-grid_column > div {
+			    margin-bottom: 15px;
+			  }
+			}
+
+
+			@media only screen and (min-width: 500px) {
+			  .my-masonry-grid {
+			    margin-left: -15px;
+			  }
+			  .my-masonry-grid_column {
+			    padding-left: 15px;
+			  }
+			  .my-masonry-grid_column > div {
+			    margin-bottom: 15px;
+			  }
+			}
 		}
-
-		@media (min-width: 500px) {
-      grid-template-columns: 1fr 1fr;
-    }
-
-    @media (min-width: 999px) {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
 	}
 }
