--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,56 +59,47 @@ a {
   cursor: pointer;
 }
 
-.footer {
-  margin-top: -50px;
-  width: calc(100% - 60px);
-  margin: 0 auto;
 
-  .ff {
-    border-top: 1px solid rgba(0, 0, 4, 0.125);
-    padding: 20px 0;
+.my-masonry-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+
+  .my-masonry-grid_column {
+    background-clip: padding-box;
+  }
+
+  .my-masonry-grid_column > div {
+    margin-bottom: 15px;
   }
 }
+
 
 @media only screen and (min-width: 500px) {
-  .footer {
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-
-    .ff {
-      padding: 20px 30px;
-    }
+  .my-masonry-grid {
+    margin-left: -15px;
+  }
+  .my-masonry-grid_column {
+    padding-left: 15px;
+  }
+  .my-masonry-grid_column > div {
+    margin-bottom: 15px;
   }
 }
 
-@media only screen and (min-width: 999px) {
-  .footer {
-    max-width: 100%;
-    margin: 0 0;
-    width: 100%;
-
-    display: grid;
-    grid-template-columns: 380px 1fr;
-
-    .ff {
-      grid-column: 2;
-      max-width: 800px;
-      width: 90%;
-      margin: 0 auto;
-      padding: 20px 0;
-    }
-  }
+.react-loading-skeleton {
+  margin-bottom: 15px !important; 
+  border-radius: 8px !important;
+  background: var(--secondaryBg) !important;
+  box-shadow: var(--shadow) !important;
+  border: 3px solid var(--borderColor) !important;
 }
 
-@media only screen and (min-width: 1200px) {
-  .footer {
-
-    .ff {
-      padding: 20px 30px;
-    }
-  }
+.react-loading-skeleton:after {
+  background: var(--background) !important;
 }
+
 
 @import "about";
 @import "projects";
